--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,22 +2,122 @@
 <html>
 <head>
 	<title>Blockwise</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
-	<h1>Blockwise</h1>
+	<header>
+		<h1>Blockwise</h1>
+		<p id="slogan">Your first stop for the latest blockchain and cryptocurrency news from around the world"</p>
+		<img src="images/icons8-bitcoin-48.png"alt="orange bitcoin logo"title="bitcoin logo">
+	</header>
 
-	<p>Your first stop for the latest blockchain and cryptocurrency news from around the world</p>
-
-	<img src="https://en.bitcoin.it/wiki/File:BC_Logo_.png"alt="prange itcoin logo"title="bitcoin logo">
-
-	<p>We offer current news, happenings, and updates about the blockchain and cryptocurrency from around the world.  Through Blockwise, you can learn about:</p>
-		<ul>Bitcoin</ul>
-			<li>Altcoins</li>
-			<li>Crypto Laws & Regulation</li>
-			<li>Mining</li>
-			<li>...and more!</li>
-		</ul>
-	<p>Contact me:<a href="mailto:mattschwinden@gmail.com?subject=Contacting You Through Blockwise">mattschwinden@gmail.com</a></p>
+<section>
+	<div>
+		<h2>
+			Bitcoin
+		</h2>
+		<figure>
+			<img src="">
+		</figure>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article><article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+	</div>
+	<div>
+		<h2>
+			Altcoin
+		</h2>
+		<figure>
+			<img src="">
+		</figure>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article><article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+	</div><div>
+		<h2>
+			Crpyto Mining
+		</h2>
+		<figure>
+			<img src="">
+		</figure>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+		<article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article><article>
+			<h2>
+				sample sample sample
+			</h2>
+			<p>
+				sample sample sample
+			</p>
+			<a href="">sample sample</a>
+		</article>
+	</div>
+</section>
+	<footer>
+			<p>
+				Contact me:<a href="mailto:mattschwinden@gmail.com?subject=Contacting You Through Blockwise">mattschwinden@gmail.com</a>
+			</p>
+	</footer>
 </body>
 </html>
