unit_5_project_updateaftermentormeeting

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
 <body>
 	<div class="wrapper">
 	<nav>
-
+		<ul>
+			<li>Bitcoin</li>
+			<li>Altcoins</li>
+			<li>Crypto Mining</li>
+		</ul>
 	</nav>
 	<header>
 		<h1>Blockwise</h1>
@@ -18,7 +26,7 @@
 		</h2>
 			<article>
 				<h3>
-					Sample Bitcoin Article Title
+					Sample Bitcoin Article Title #1
 				</h3>
 				<p>
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
@@ -32,6 +40,38 @@
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
 				</p>
 			</article>
+			<article>
+				<h3>
+					Sample Bitcoin Article Title #3
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Bitcoin Article Title #4
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Bitcoin Article Title #5
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Bitcoin Article Title #6
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
 	</section>
 	
 	<section id="Altcoins">
@@ -40,7 +80,7 @@
 		</h2>
 			<article>
 				<h3>
-					Sample Altcoins Article Title
+					Sample Altcoins Article Title #1
 				</h3>
 				<p>
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
@@ -54,15 +94,47 @@
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
 				</p>
 			</article>
+			<article>
+				<h3>
+					Sample Altcoins Article Title #3
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Altcoins Article Title #4
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Altcoins Article Title #5
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Altcoins Article Title #6
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
 	</section>
 
-	<section id="Crpyto Mining">
+	<section id="Crypto Mining">
 		<h2>
 			Crypto Mining
 		</h2>
 			<article>
 				<h3>
-					Sample Crypto Mining Article Title
+					Sample Crypto Mining Article Title #1
 				</h3>
 				<p>
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
@@ -71,6 +143,38 @@
 			<article>
 				<h3>
 					Sample Crypto Mining Article Title #2
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Crypto Mining Article Title #3
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Crypto Mining Article Title #4
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Crypto Mining Article Title #5
+				</h3>
+				<p>
+					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
+				</p>
+			</article>
+			<article>
+				<h3>
+					Sample Crypto Mining Article Title #6
 				</h3>
 				<p>
 					paragraph highlighing and/or quoting the key point and/or message be delivered by the article.  Also known as click bait.
@@ -87,4 +191,3 @@
 </body>
 </html>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
